--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,9 @@
 {
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
